tests/parsing/smtlib/mcil/errors/250_check-system_missing_reachable_formula_3.mcil
(check-system sys :reachable (a))